@@ -12,7 +12,6 @@ import org.ipvp.canvas.mask.Mask;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * A menu that allows the player to select a block from a list of blocks. It is possible to switch pages and to proceed to the next menu once a block has been selected. It is also possible to select multiple blocks.
@@ -25,7 +24,7 @@ public class BlockListMenu extends AbstractPaginatedMenu {
     public static final int NEXT_ITEM_SLOT = 35;
     public static final int BACK_ITEM_SLOT = 27;
 
-    public ArrayList<String> selectedMaterials;
+    public List<String> selectedMaterials;
     private final List<ItemStack> items;
 
     private final AbstractMenu backMenu;
@@ -67,9 +66,9 @@ public class BlockListMenu extends AbstractPaginatedMenu {
 
         return BinaryMask.builder(getMenu())
                 .item(MenuItems.ITEM_BACKGROUND)
-                .pattern("000000000")
-                .pattern("000000000")
-                .pattern("000000000")
+                .pattern(BinaryMask.EMPTY_PATTERN)
+                .pattern(BinaryMask.EMPTY_PATTERN)
+                .pattern(BinaryMask.EMPTY_PATTERN)
                 .pattern(backSlot + "11000110")
                 .build();
     }
@@ -85,7 +84,7 @@ public class BlockListMenu extends AbstractPaginatedMenu {
             selectedMaterials = new ArrayList<>();
 
         // Set pagignated items
-        List<ItemStack> items = source.stream().map(l -> (ItemStack) l).collect(Collectors.toList());
+        List<ItemStack> items = source.stream().map(l -> (ItemStack) l).toList();
         int slot = 0;
         for (ItemStack item : items) {
             if (selectedMaterials.contains(Item.getUppercaseMaterialString(item)))
@@ -102,9 +101,9 @@ public class BlockListMenu extends AbstractPaginatedMenu {
 
     @Override
     protected void setPaginatedItemClickEventsAsync(List<?> source) {
-        List<ItemStack> items = source.stream().map(l -> (ItemStack) l).collect(Collectors.toList());
+        List<ItemStack> itemStacks = source.stream().map(l -> (ItemStack) l).toList();
         int slot = 0;
-        for (ItemStack item : items) {
+        for (ItemStack ignored : itemStacks) {
             final int _slot = slot;
             getMenu().getSlot(_slot).setClickHandler((clickPlayer, clickInformation) -> {
                 String type = Item.getUppercaseMaterialString(getMenu().getSlot(_slot).getItem(getMenuPlayer()));
